--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
   build:
-    runs-on: ubuntu-lates 
+    runs-on: ubuntu-latest 
     steps:
       - run: echo "foo"
