--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
         - run: sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
   build:
     runs-on: ubuntu-latest
+    env: 
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
     steps:
       - run: echo "Building the image..."
       - run: docker build -t devops_toolkit:latest .
