--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
       - uses: actions/checkout@v3
       - run: echo "Building the image..."
       - run: docker build -t devops_toolkit:latest .
-      - run: docker login --username $DOCKER_USERNAME --password DOCKER_PASSWORD
+      - run: docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
 
 
