feat: printout images

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: echo "Building the image..."
       - run: docker build -t devops_toolkit:latest .
+      - run: docker images
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -36,4 +37,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
       - run: docker push devops_toolkit:latest
+      - run: docker images
 
