--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,4 +60,4 @@ jobs:
       - name: Docker Logon
         run: docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
       - name: Image Push
-      - run: docker push devops_toolkit:latest
+        run: docker push devops_toolkit:latest
