ci: temporary feature removal

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
-        - run: echo "Updating System..."
-        - run: sudo apt-get update -y
+          #- run: echo "Updating System..."
+          #- run: sudo apt-get update -y
         - run: echo "Installing Docker..."
           #- run: sudo apt-get install ca-certificates curl gnupg
           #- run: sudo install -m 0755 -d /etc/apt/keyrings
