ci: fixing typo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: docker_image 
+          name: devops_toolkit
           path: /tmp/devops_toolkit.tar
   deploy:
     needs: build
